fix: update z-index for modal backdrop to ensure proper layering and adjust CSS styles for consistency

--- a/components/CategoriesFilter/CategoriesFilter.module.css
+++ b/components/CategoriesFilter/CategoriesFilter.module.css
@@ -22,7 +22,9 @@
   box-sizing: border-box;
   background-color: #f3f9ed;
 }
-
+.overlayContainer{
+  position: relative;
+}
 /* ===========================================================
    HEADER (Фільтри + Очистити всі)
    =========================================================== */
@@ -73,13 +75,13 @@
     background-color: #f3f9ed;
     width: 100%;
     position: absolute;
-    z-index: 3;
+    z-index: 1;
     display: block;
     border: 1px solid var(--color-light-gray);
     border-radius: 16px;
-    padding: 0px 16px;
+    padding: 0 16px;
     margin-top: 16px;
-    box-shadow: #1c1c1c1b 0px 2px 16px -2px;
+    box-shadow: #1c1c1c1b 0 2px 16px -2px;
   }
 }
 
@@ -181,7 +183,6 @@
 .sectionHeaderRow {
   display: flex;
   height: 67px;
-  justify-content: space-between;
   align-items: center;
   justify-content: space-between; /* ✔ розтягує заголовок і шеврон */
   /* gap: 12px; */
@@ -288,7 +289,7 @@
   height: 20px;
   border-radius: 50%;
   background: #ffffff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -299,7 +300,7 @@
   height: 20px;
   border-radius: 50%;
   background: #ffffff;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -335,9 +336,7 @@
 /* ===========================================================
    ACCORDION
    =========================================================== */
-.accordion {
-  /* margin-top: 16px; */
-}
+
 
 @media (max-width: 767px) {
   .accordionMobile {
@@ -363,9 +362,6 @@
   list-style: none;
   margin: 0;
   padding-bottom: 20px;
-}
-
-.categoryItem {
 }
 
 /* ===========================================================
@@ -396,7 +392,7 @@
   align-items: center;
   height: 40px;
   gap: 10px;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 /* Custom checkbox */
